[gd_scene load_steps=2 format=3 uid="uid://dmc6hldljd4cl"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_o7myp"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_o7myp")
metadata/_edit_horizontal_guides_ = []

[node name="MapBtn" type="Button" parent="."]
offset_left = 232.0
offset_top = 128.0
offset_right = 352.0
offset_bottom = 192.0
text = "Cyberland"

[node name="AvatarBtn" type="Button" parent="."]
offset_left = 104.0
offset_top = 264.0
offset_right = 215.0
offset_bottom = 315.0
scale = Vector2(1.00508, 1.10458)
text = "Avatar"

[node name="FilesBtn" type="Button" parent="."]
offset_left = 104.0
offset_top = 456.0
offset_right = 212.0
offset_bottom = 507.0
scale = Vector2(1.00508, 1.10458)
text = "Files"

[node name="CollectionsBtn" type="Button" parent="."]
offset_left = 368.0
offset_top = 264.0
offset_right = 480.0
offset_bottom = 320.0
text = "Collections
"

[node name="ShopBtn" type="Button" parent="."]
offset_left = 368.0
offset_top = 456.0
offset_right = 480.0
offset_bottom = 512.0
text = "Shop"

[node name="QuestionsBtn" type="Button" parent="."]
offset_left = 368.0
offset_top = 648.0
offset_right = 480.0
offset_bottom = 704.0
text = "Questions"

[connection signal="pressed" from="MapBtn" to="." method="_on_map_btn_pressed"]
[connection signal="pressed" from="AvatarBtn" to="." method="_on_avatar_btn_pressed"]
[connection signal="pressed" from="FilesBtn" to="." method="_on_files_btn_pressed"]
[connection signal="pressed" from="CollectionsBtn" to="." method="_on_collections_btn_pressed"]
[connection signal="pressed" from="ShopBtn" to="." method="_on_shop_btn_pressed"]
[connection signal="pressed" from="QuestionsBtn" to="." method="_on_questions_btn_pressed"]
